----------------------------
wxWindows 2.5/2.6 Change Log
----------------------------

INCOMPATIBLE CHANGES SINCE 2.4.x
================================

OTHER CHANGES
=============

2.5.0
-----

All:

- added wxDateSpan::operator==() and !=() (Lukasz Michalski)
- use true/false throughout the library instead of TRUE/FALSE
- wxStopWatch::Start() resumes the stop watch if paused, as per the docs
- added wxDirTraverser::OnOpenError() to customize the error handling
- added wxArray::SetCount()

wxBase:

- added Watcom makefiles

All GUI ports:

- added wxSplitterWindow handler to XRC
- added wxFlexGridSizer::SetFlexibleDirection() (Szczepan Holyszewski)
- implemented GetEditControl for wxGenericTreeCtrl (Peter Stieber)
- improved contrib/utils/convertrc parsing (David J. Cooke)
- fixed handling of URLs and filenames in wxFileSystem
- implemented alignment for wxGrid bool editor and renderer
- support wxListCtrl columns alignment for all platforms and not just MSW
- added wxToolBar Add/InsertTool(tool) (Janusz Piwowarski)
- WXR resources can now be used in Unicode builds

- Changed to type-safe wxSizerItemList for wxSizer child items.

    Deprecated:

        wxSizer::Remove( wxWindow* )
            - it does not function as Remove would usually be expected to
              and destroy the window, use Detach instead.

        wxSizer::GetOption(),
        wxSizer::SetOption()
            - wxSizer 'option' parameter was renamed 'proportion' to better
              reflect its action, use Get/SetProportion instead.

        wxKeyEvent::KeyCode()
            - use GetKeyCode instead.

        wxList:: Number, First, Last, Nth
            - use typesafe GetCount, GetFirst, GetLast, Item instead.

        wxNode:: Next, Previous, Data
            - use typesafe Get* instead.

        wxListBase::operator wxList&()
            - use typesafe lists instead.

Unix:

- fixed compilation on systems with zlib installed but < 1.1.3 version