@@ -677,7 +677,7 @@ bool wxSetWMDecorations(Window w, long style)
         wmProp.flags |= GR_WM_FLAGS_PROPS ;
     }
 
-    if (style & wxSYSTEM_MENU)
+    if (style & wxCLOSE)
     {
         wmProp.props |= GR_WM_PROPS_CLOSEBOX ;
         wmProp.flags |= GR_WM_FLAGS_PROPS ;
@@ -751,10 +751,10 @@ bool wxSetWMDecorations(Window w, long style)
             hints.decorations |= MWM_DECOR_TITLE;
             
         if ((style & wxSYSTEM_MENU) != 0)
-        {
-            hints.functions |= MWM_FUNC_CLOSE;
             hints.decorations |= MWM_DECOR_MENU;
-        }
+        
+        if ((style & wxCLOSE) != 0)
+            hints.functions |= MWM_FUNC_CLOSE;
         
         if ((style & wxMINIMIZE_BOX) != 0)
         {
