@@ -13,6 +13,7 @@ OTHER CHANGES
 
 All:
 
+- added wxCLOSE style for dialogs and frames
 - added wxDateSpan::operator==() and !=() (Lukasz Michalski)
 - use true/false throughout the library instead of TRUE/FALSE
 - wxStopWatch::Start() resumes the stop watch if paused, as per the docs
